[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Bug/Materials/BugSecondaryMaterial.tres" type="Material" id=1]
[ext_resource path="res://Scenes/Bug/Materials/BugBodyMaterial.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Bug/Bug.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
height = 0.465232

[node name="Bug" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 3 )

[node name="BugModel" type="Spatial" parent="."]

[node name="Antenna1" type="CSGCylinder" parent="BugModel"]
transform = Transform( 0.867609, 0.497247, 0, -0.497247, 0.867609, 0, 0, 0, 1, 0.667593, 0.732435, -0.593232 )
radius = 0.078
material = ExtResource( 1 )

[node name="Antenna2" type="CSGCylinder" parent="BugModel"]
transform = Transform( 0.864433, -0.502748, 0, 0.502748, 0.864433, 0, 0, 0, 1, -0.578805, 0.732435, -0.593232 )
radius = 0.078
material = ExtResource( 1 )

[node name="Leg1" type="CSGBox" parent="BugModel"]
transform = Transform( 0.965926, 0, -0.224506, 0, 1, 0, 0.258819, 0, 0.837867, -0.577063, -0.125914, 0.190024 )
width = 0.159312
height = 0.215894
material = ExtResource( 1 )

[node name="Leg2" type="CSGBox" parent="BugModel"]
transform = Transform( 0.965926, 0, 0.224506, 0, 1, 0, -0.258819, 0, 0.837867, 0.565069, -0.125914, 0.217145 )
width = 0.159312
height = 0.215894
material = ExtResource( 1 )

[node name="Body" type="CSGSphere" parent="BugModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.30023, 0, 0, 0 )
radial_segments = 20
rings = 8
material = ExtResource( 2 )

[node name="CSGBox" type="CSGBox" parent="BugModel/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.769093, 0, -0.52, 0 )
operation = 2
height = 1.0
depth = 3.19081

[node name="DeadBugModel" type="Spatial" parent="."]
visible = false

[node name="Antenna1" type="CSGCylinder" parent="DeadBugModel"]
transform = Transform( -0.156728, 0.987642, 0, -0.987642, -0.156728, 0, 0, 0, 1, 0.667593, 0.197892, -0.593232 )
radius = 0.078
material = ExtResource( 1 )

[node name="Antenna2" type="CSGCylinder" parent="DeadBugModel"]
transform = Transform( 0.0895949, -0.772925, 0.62814, 0.993349, 0.115146, 0, -0.0723275, 0.623962, 0.778101, -0.921738, -0.0775524, -0.593232 )
radius = 0.078
material = ExtResource( 1 )

[node name="Leg1" type="CSGBox" parent="DeadBugModel"]
transform = Transform( -0.0856083, 0, 0.864239, 0, 1, 0, -0.996329, 0, -0.0742584, -0.958822, -0.125914, 0.75159 )
width = 0.159312
height = 0.215894
material = ExtResource( 1 )

[node name="Leg2" type="CSGBox" parent="DeadBugModel"]
transform = Transform( 0.965926, 0, 0.224506, 0, 1, 0, -0.258819, 0, 0.837867, 0.565069, -0.125914, 0.217145 )
width = 0.159312
height = 0.215894
material = ExtResource( 1 )

[node name="Body" type="CSGSphere" parent="DeadBugModel"]
transform = Transform( 0.865037, 0.501664, -0.00857495, -0.501654, 0.865062, 0.00427393, 0.00735404, 0.000464944, 1.30019, 0, 0, 0 )
radial_segments = 20
rings = 8
material = ExtResource( 2 )

[node name="CSGBox" type="CSGBox" parent="DeadBugModel/Body"]
transform = Transform( 0.866032, -0.499986, 0.00121771, 0.499987, 0.866025, -0.00361472, 0.000578941, 0.00287588, 0.769087, 0.305958, -0.487309, 0.140738 )
operation = 2
height = 1.20165
depth = 3.19081

[node name="CSGSphere" type="CSGSphere" parent="DeadBugModel/Body"]
transform = Transform( 1.42311, -0.377572, 0.00665711, 0.823557, 0.65741, -0.00529079, 0.00469042, 0.00272456, 1.77229, -0.603337, 0.930741, -0.0391578 )
operation = 2
radius = 0.995362
material = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.951773, 0, 0, 0, 0.600817, 0, 0, 0, 1.0167, 0, 0.388045, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
